fixing jenkins scripts